Mapped dev-master on master

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "master"
+        }
+    }
 }
