Updated version composer requirements

--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,5 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "master"
-        }
-    }
+    "prefer-stable": true
 }
