--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,6 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "version": "1.0"
 }
